Working repo with eslint and prettier configs

--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -35,7 +35,7 @@
       "ecmaVersion": "latest",
       "sourceType": "module",
       "project": "./tsconfig.json",
-      "tsconfigRootDir": "./"
+      "tsconfigRootDir": "./my-app"
     },
     "plugins": [
       "prettier",
